# OT-diffusion-toolkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
ATLAS/: ATLAS status 20112025.md  ATLAS_changelog.md  CHANGELOG.md  CHANGES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  LICENSE  QUICK_START.md  README.md  mypy.ini  pyproject.toml  test_trainability_sampling.py  validate_atlas.py
ATLAS/atlas/: __init__.py  __version__.py  check_hardware.py  easy_api.py  types.py
ATLAS/atlas/conditioning/: __init__.py  clip_interface.py  utils.py
ATLAS/atlas/config/: __init__.py  conditioning_config.py  kernel_config.py  model_config.py  presets.py  sampler_config.py  training_config.py
ATLAS/atlas/examples/: README.md  __init__.py  basic_sampling.py  celeba1024_inference.py  celeba1024_training.py  cifar10_inference.py  cifar10_training.py  custom_kernel.py  easy_start.py  ffhq128_inference.py  ffhq128_training.py  high_res_generation.py  imagenet64_inference.py  imagenet64_training.py  lsun256_inference.py  lsun256_training.py  text_to_image.py  training_pipeline.py
ATLAS/atlas/kernels/: __init__.py  base.py  direct.py  fft.py  nystrom.py  rff.py
ATLAS/atlas/models/: __init__.py  attention.py  blocks.py  embeddings.py  lora.py  score_network.py
ATLAS/atlas/schedules/: __init__.py  noise.py  timesteps.py
ATLAS/atlas/solvers/: __init__.py  hierarchical_sampler.py  schrodinger_bridge.py
ATLAS/atlas/tests/: __init__.py  test_conditioning.py  test_easy_api.py  test_formal_verification.py  test_gradient_flow.py  test_integration.py  test_kernels.py  test_models.py  test_no_conflict_markers.py  test_noise_prediction.py  test_numerical_correctness.py  test_presets.py  test_solver_core.py  test_solvers.py  test_training_sanity.py
ATLAS/atlas/tests/benchmarks/: __init__.py  benchmark_kernels.py  benchmark_sampling.py
ATLAS/atlas/utils/: __init__.py  cuda_graphs.py  data.py  hardware.py  image_ops.py  memory.py  noise_prediction.py  numerical.py  random.py  tiling.py
ATLAS/docs/: CUDA_GRAPHS_TILING.md  DEPENDENCIES.md  DOCUMENTATION_IMPROVEMENTS.md  EXTENDING.md  GETTING_STARTED.md  GPU_CPU_BEHAVIOR.md  HOW_TO_TRAIN_AND_INFER.md  QUICKSTART.md  README.md
ATLAS/typings/open_clip/: __init__.pyi
ATLAS/typings/torchvision/: __init__.pyi  utils.pyi
ATLAS/typings/torchvision/datasets/: __init__.pyi
ATLAS/typings/torchvision/transforms/: __init__.pyi  functional.pyi
ATLAS/typings/tqdm/: __init__.pyi
FastSB-OT/: CHANGELOG.md  KERNELS_FIXES_SUMMARY.md  LICENSE  README.md  patch_full.diff  pyproject.toml  test_cache_fixes.py  verify_fastsbot.py
FastSB-OT/fastsb_ot/: __init__.py  cache.py  common.py  config.py  kernels.py  solver.py  transport.py  utils.py
FastSB-OT/tests/: __init__.py  test_numerical_stability.py  test_solver.py  test_transport.py  test_triton_kernels.py
FastSB-OT/typings/triton/: __init__.pyi  language.pyi
SBDS/: CHANGELOG.md  LICENSE  README.md  pyproject.toml  verification_test.py
SBDS/sbds/: README.md  __init__.py  common.py  fft_ot.py  kernel.py  kernels.py  metrics.py  noise_schedule.py  schedule.py  sinkhorn.py  solver.py  testing.py  transport.py  utils.py
SBDS/tests/: __init__.py  test_kernel.py  test_solver.py
SPOT/: CHANGELOG.md  LICENSE  README.md  __init__.py  __main__.py  _version.py  builder.py  config.py  constants.py  corrector.py  dpm_solver.py  integrators.py  logger.py  pyproject.toml  results.py  schedules.py  selftest.py  sinkhorn.py  solver.py  transport.py  triton_kernels.py  utils.py  verification_script.py
SPOT/tests/: __init__.py  test_ddim_integrator.py  test_dpm_solver.py  test_drift_math.py  test_schedules_beta.py  test_sinkhorn.py
