[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbds"
version = "0.1.0"
description = "SBDS — Score-Based Schrödinger Bridge Diffusion Solver research toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Thierry Silvio Claude Soreze"}
]
keywords = ["diffusion", "optimal-transport", "schrodinger-bridge", "pytorch", "research"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.23",
  "torch>=2.1"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/tsoreze/OT-diffusion-toolkit"
Source = "https://github.com/tsoreze/OT-diffusion-toolkit"
Documentation = "https://github.com/tsoreze/OT-diffusion-toolkit/tree/main/SBDS"

[tool.setuptools]
packages = ["sbds"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["sbds/tests"]
