[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-solver"
dynamic = ["version"]
description = "SPOT — Schrödinger Partial Optimal Transport solver"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
  {name = "Thierry Silvio Claude Soreze"}
]
keywords = ["diffusion", "optimal-transport", "schrodinger-bridge", "pytorch"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.23",
  "torch>=2.0",
  "tqdm>=4.64"
]

[project.optional-dependencies]
triton = ["triton>=2.0"]
pot = ["POT>=0.8"]
dev = ["pytest>=7.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/tsoreze/OT-diffusion-toolkit"
Source = "https://github.com/tsoreze/OT-diffusion-toolkit"
Documentation = "https://github.com/tsoreze/OT-diffusion-toolkit/tree/main/SPOT"

[tool.setuptools]
packages = ["SPOT"]

[tool.setuptools.dynamic]
version = {attr = "SPOT._version.__version__"}

